# FASTATrimmer

./: .gitignore  CMakeLists.txt  Makefile
include/regex/: argument_parser.h
include/trimmer/: trimmer.h
src/: argument_parser.cpp  main.cpp  trimmer.cpp
test/: test_process_arguments.cpp
